--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  /* background: blue */
 }
 
 button {
@@ -90,7 +89,13 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+.new-todo-form {
+  display: flex;
+  margin-bottom: 0;
+}
+
 .new-todo,
+.new-todo-form .new-todo-form__timer,
 .edit {
   position: relative;
   margin: 0;
@@ -108,11 +113,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.new-todo {
+.new-todo,
+.new-todo-form .new-todo-form__timer {
   padding: 16px 16px 16px 60px;
   border: none;
   background: rgba(0, 0, 0, 0.003);
   box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+}
+
+.new-todo {
+  width: 70%;
+}
+
+.new-todo-form .new-todo-form__timer {
+  width: 15%;
+  padding-left: 16px;
 }
 
 .main {
@@ -221,38 +236,43 @@ body {
 .todo-list li label {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 15px 85px 15px 60px;
 }
 
-.todo-list li label .created {
-  font-size: 13px;
-  color: gray;
+.todo-list li .view {
+  position: relative;
 }
 
 .todo-list li label .description {
+  font-size: 13px;
+  color: gray;
+}
+.todo-list li label .description > .timer {
+  display: inline-block;
+  transform: translate(-5px, -3px);
+}
+.todo-list li label .title {
   word-break: break-all;
   display: block;
   line-height: 1.2;
   transition: color 0.4s;
   font-weight: 400;
   color: #4d4d4d;
+  margin-right: auto;
 }
 
-.todo-list li.completed label .description {
+.todo-list li.completed label .title {
   color: #cdcdcd;
   text-decoration: line-through;
 }
 
 .todo-list li .icon {
-  position: absolute;
-  top: 0;
-  bottom: -3px;
   width: 30px;
   height: 40px;
   font-size: 34px;
   color: #cc9a9a;
-  margin: auto 0 11px;
+  margin: auto 0;
   transition: color 0.2s ease-out;
   cursor: pointer;
 }
@@ -262,6 +282,9 @@ body {
 }
 
 .todo-list li .icon-destroy {
+  position: absolute;
+  top: 0;
+  bottom: -3px;
   right: 10px;
 }
 
@@ -270,12 +293,39 @@ body {
 }
 
 .todo-list li .icon-edit {
+  position: absolute;
+  top: 0;
+  bottom: -3px;
   font-size: 19px;
   right: 45px;
 }
 
 .todo-list li .icon-edit:after {
   content: '✎';
+}
+
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+  font-size: 18px;
+  width: 18px;
+  height: 18px;
+  transform: translate(0px, -2px);
+}
+
+.todo-list li .icon-play {
+  font-size: 15px;
+  /* transform: translate(55px, 00px); */
+}
+.todo-list li .icon-pause {
+  /* transform: translate(63px, 00px); */
+  margin-right: 15px;
+}
+.icon-pause:after {
+  content: '⏸';
+}
+
+.icon-play:after {
+  content: '▶';
 }
 
 .todo-list li .edit {
